tests/cases/compiler-development/artifact/errors/diagnostic-struct-field-unknown.diagnostic
diagnostic error code=T0001 family=type message="struct 'Point' has no field 'y'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/structs/errors/struct-field-unknown.ari" display="tests/cases/structs/errors/struct-field-unknown.ari" bytes=89
  Label index=0 role=primary source_id=0 source="tests/cases/structs/errors/struct-field-unknown.ari" line=7 column=9 end_line=7 end_column=10 byte_start=85 byte_end=86 message=""
  Snippet label=0 text="  --> tests/cases/structs/errors/struct-field-unknown.ari:7:9\n   |\n 7 |   point.y\n   |         ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/structs/errors/struct-field-unknown.ari" line=1 column=8 end_line=1 end_column=13 byte_start=7 byte_end=12 message="struct 'Point' declares fields 'x'"
  Snippet label=1 text="  --> tests/cases/structs/errors/struct-field-unknown.ari:1:8\n   |\n 1 | struct Point {\n   |        ^^^^^"
  Note index=0 location=none message="field access and struct patterns must name a declared field"
  Help index=0 location=none message="use one of 'x'"
